@@ -36,6 +36,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-11-23 DP  1.9.0  Add an option to enable/disable rules on tables [Gullaume
+                      Lelarge]
 2007-11-23 DP  1.9.0  Add options to TRUNCATE and TRUNCATE...CASCADE tables.
                       [Guillaume Lelarge]
 2007-11-23 DP  1.8.1  Fix path discovery on Unix so standard installs can be
